# Project-Dashboard

./: README.md  pyproject.toml
project_dashboard/: hooks.py  patches.txt
project_dashboard/project_dashboard/: setup.py
project_dashboard/project_dashboard/doctype/logistics_daily_log/: logistics_daily_log.js  logistics_daily_log.json  logistics_daily_log.py  test_logistics_daily_log.py
project_dashboard/project_dashboard/doctype/logistics_daily_update/: logistics_daily_update.json  logistics_daily_update.py
project_dashboard/project_dashboard/doctype/logistics_rate_quote/: logistics_rate_quote.json  logistics_rate_quote.py
project_dashboard/project_dashboard/doctype/logistics_request/: logistics_request.js  logistics_request.json  logistics_request.py  test_logistics_request.py
project_dashboard/project_dashboard/doctype/logistics_shipment_row/: logistics_shipment_row.json  logistics_shipment_row.py
project_dashboard/project_dashboard/doctype/logistics_shipping_document/: logistics_shipping_document.json  logistics_shipping_document.py
project_dashboard/project_dashboard/doctype/logistics_tracker/: logistics_tracker.js  logistics_tracker.json  logistics_tracker.py  test_logistics_tracker.py
project_dashboard/project_dashboard/doctype/packing_list/: packing_list.js  packing_list.json  packing_list.py
project_dashboard/project_dashboard/doctype/packing_list_crate/: packing_list_crate.json  packing_list_crate.py
project_dashboard/project_dashboard/print_formats/: packing_list_print_format.html  qc_inspection_print_format.html
(+101 files in other folders)
