[project]
name = "project_dashboard"
authors = [
    { name = "ERP Tripod", email = "erp@tripodmena.com"}
]
description = "Project Dashboard for ERPNext v14"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=14.0.0,<15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<15.0.0"
